# farma-tools-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.snippet.yml  pyproject.toml
.github/workflows/: docker.yml
docs/: README.md  architecture.md  deployment.md  tools.md
src/farma_tools_mcp/: __init__.py  auth.py  cli.py  http_utils.py  oauth.py  server.py
src/farma_tools_mcp/tools/: __init__.py  ares.py  cuzk_areas.py  cuzk_parcela.py  open_meteo.py  osm_nearby.py
tests/: conftest.py  test_ares.py  test_auth.py  test_cuzk_areas.py  test_cuzk_parcela.py  test_oauth.py  test_open_meteo.py  test_osm_nearby.py
tests/fixtures/: README.md  ares_company.json  cuzk_area_layer40.json  cuzk_area_layer44.json  cuzk_ku.json  cuzk_obec.json  cuzk_parcela.json  openmeteo_climate.json  openmeteo_forecast.json  overpass_restaurants.json
